--- a/Josh_Deforum_Stable_Diffusion.ipynb
+++ b/Josh_Deforum_Stable_Diffusion.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "c442uQJ_gUgy"
@@ -9,7 +10,7 @@
         "# **Deforum Stable Diffusion v0.5**\n",
         "[Stable Diffusion](https://github.com/CompVis/stable-diffusion) by Robin Rombach, Andreas Blattmann, Dominik Lorenz, Patrick Esser, Björn Ommer and the [Stability.ai](https://stability.ai/) Team. [K Diffusion](https://github.com/crowsonkb/k-diffusion) by [Katherine Crowson](https://twitter.com/RiversHaveWings). You need to get the ckpt file and put it on your Google Drive first to use this. It can be downloaded from [HuggingFace](https://huggingface.co/CompVis/stable-diffusion).\n",
         "\n",
-        "Notebook by [deforum](https://discord.gg/upmXXsrwZc)\n",
+        "Notebook by [deforum](https://discord.gg/upmXXsrwZc), modified by [Josh Levitas](https://github.com/joshualevitas)\n",
         "\n",
         "**Important note:** this notebook severely lacks maintainance as the most devs have moved to [the WebUI extension](https://github.com/deforum-art/deforum-for-automatic1111-webui). Please, visit the [Deforum Discord server](https://discord.gg/deforum) to get info on the more active forks\n",
         "\n",
