--- a/Josh_Deforum_Stable_Diffusion.ipynb
+++ b/Josh_Deforum_Stable_Diffusion.ipynb
@@ -18,6 +18,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "LBamKxcmNI7-"
@@ -40,6 +41,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "T4knibRpAQ06"
@@ -54,33 +56,58 @@
       "metadata": {
         "id": "xnII4Myf6JUB"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'\\noptions:\\n\\nstable diffusion v1-4: /home/jnl6052/music/model/sd-v1-4.ckpt\\nlexica v2: /home/jnl6052/music/model/lexica-v2.ckpt\\n\\n'"
+            ]
+          },
+          "execution_count": 1,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "selected_checkpoint = \"/home/jnl6052/music/model/sd-v1-4.ckpt\"\n",
-        "\n",
         "'''\n",
-        "options:\n",
+        "selected_checkpoint options:\n",
         "\n",
         "stable diffusion v1-4: /home/jnl6052/music/model/sd-v1-4.ckpt\n",
         "lexica v2: /home/jnl6052/music/model/lexica-v2.ckpt\n",
         "\n",
-        "'''"
+        "'''\n",
+        "\n",
+        "selected_checkpoint = \"/home/jnl6052/music/model/lexica-v2.ckpt\"\n",
+        "\n",
+        "\n",
+        "'''\n",
+        "output folder name\n",
+        "whatever you change this to will be the name of the output folder\n",
+        "'''\n",
+        "#not set up yet\n",
+        "output_folder_name = \"\"\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "cellView": "form",
         "id": "2g-f7cQmf2Nt"
       },
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "NVIDIA GeForce RTX 2060 SUPER, 8192 MiB, 7970 MiB\n",
-            "\n"
+          "ename": "FileNotFoundError",
+          "evalue": "[Errno 2] No such file or directory: 'nvidia-smi'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[3], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m#@markdown **NVIDIA GPU**\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39msubprocess\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m sub_p_res \u001b[39m=\u001b[39m subprocess\u001b[39m.\u001b[39;49mrun([\u001b[39m'\u001b[39;49m\u001b[39mnvidia-smi\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39m--query-gpu=name,memory.total,memory.free\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39m--format=csv,noheader\u001b[39;49m\u001b[39m'\u001b[39;49m], stdout\u001b[39m=\u001b[39;49msubprocess\u001b[39m.\u001b[39;49mPIPE)\u001b[39m.\u001b[39mstdout\u001b[39m.\u001b[39mdecode(\u001b[39m'\u001b[39m\u001b[39mutf-8\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      4\u001b[0m \u001b[39mprint\u001b[39m(sub_p_res)\n",
+            "File \u001b[0;32m/usr/lib64/python3.9/subprocess.py:505\u001b[0m, in \u001b[0;36mrun\u001b[0;34m(input, capture_output, timeout, check, *popenargs, **kwargs)\u001b[0m\n\u001b[1;32m    502\u001b[0m     kwargs[\u001b[39m'\u001b[39m\u001b[39mstdout\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m PIPE\n\u001b[1;32m    503\u001b[0m     kwargs[\u001b[39m'\u001b[39m\u001b[39mstderr\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m PIPE\n\u001b[0;32m--> 505\u001b[0m \u001b[39mwith\u001b[39;00m Popen(\u001b[39m*\u001b[39;49mpopenargs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs) \u001b[39mas\u001b[39;00m process:\n\u001b[1;32m    506\u001b[0m     \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m    507\u001b[0m         stdout, stderr \u001b[39m=\u001b[39m process\u001b[39m.\u001b[39mcommunicate(\u001b[39minput\u001b[39m, timeout\u001b[39m=\u001b[39mtimeout)\n",
+            "File \u001b[0;32m/usr/lib64/python3.9/subprocess.py:951\u001b[0m, in \u001b[0;36mPopen.__init__\u001b[0;34m(self, args, bufsize, executable, stdin, stdout, stderr, preexec_fn, close_fds, shell, cwd, env, universal_newlines, startupinfo, creationflags, restore_signals, start_new_session, pass_fds, user, group, extra_groups, encoding, errors, text, umask)\u001b[0m\n\u001b[1;32m    947\u001b[0m         \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtext_mode:\n\u001b[1;32m    948\u001b[0m             \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mstderr \u001b[39m=\u001b[39m io\u001b[39m.\u001b[39mTextIOWrapper(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mstderr,\n\u001b[1;32m    949\u001b[0m                     encoding\u001b[39m=\u001b[39mencoding, errors\u001b[39m=\u001b[39merrors)\n\u001b[0;32m--> 951\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_execute_child(args, executable, preexec_fn, close_fds,\n\u001b[1;32m    952\u001b[0m                         pass_fds, cwd, env,\n\u001b[1;32m    953\u001b[0m                         startupinfo, creationflags, shell,\n\u001b[1;32m    954\u001b[0m                         p2cread, p2cwrite,\n\u001b[1;32m    955\u001b[0m                         c2pread, c2pwrite,\n\u001b[1;32m    956\u001b[0m                         errread, errwrite,\n\u001b[1;32m    957\u001b[0m                         restore_signals,\n\u001b[1;32m    958\u001b[0m                         gid, gids, uid, umask,\n\u001b[1;32m    959\u001b[0m                         start_new_session)\n\u001b[1;32m    960\u001b[0m \u001b[39mexcept\u001b[39;00m:\n\u001b[1;32m    961\u001b[0m     \u001b[39m# Cleanup if the child failed starting.\u001b[39;00m\n\u001b[1;32m    962\u001b[0m     \u001b[39mfor\u001b[39;00m f \u001b[39min\u001b[39;00m \u001b[39mfilter\u001b[39m(\u001b[39mNone\u001b[39;00m, (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mstdin, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mstdout, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mstderr)):\n",
+            "File \u001b[0;32m/usr/lib64/python3.9/subprocess.py:1821\u001b[0m, in \u001b[0;36mPopen._execute_child\u001b[0;34m(self, args, executable, preexec_fn, close_fds, pass_fds, cwd, env, startupinfo, creationflags, shell, p2cread, p2cwrite, c2pread, c2pwrite, errread, errwrite, restore_signals, gid, gids, uid, umask, start_new_session)\u001b[0m\n\u001b[1;32m   1819\u001b[0m     \u001b[39mif\u001b[39;00m errno_num \u001b[39m!=\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m   1820\u001b[0m         err_msg \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mstrerror(errno_num)\n\u001b[0;32m-> 1821\u001b[0m     \u001b[39mraise\u001b[39;00m child_exception_type(errno_num, err_msg, err_filename)\n\u001b[1;32m   1822\u001b[0m \u001b[39mraise\u001b[39;00m child_exception_type(err_msg)\n",
+            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'nvidia-smi'"
           ]
         }
       ],
@@ -93,7 +120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "TxIOPT0G5Lx1"
       },
@@ -118,21 +145,21 @@
         "output_path = \"/home/jnl6052/music/output\" #@param {type:\"string\"}\n",
         "\n",
         "#@markdown **Google Drive Path Variables (Optional)**\n",
-        "mount_google_drive = False #@param {type:\"boolean\"}\n",
+        "# mount_google_drive = False #@param {type:\"boolean\"}\n",
         "force_remount = False\n",
         "\n",
-        "if mount_google_drive:\n",
-        "    from google.colab import drive # type: ignore\n",
-        "    try:\n",
-        "        drive_path = \"/content/drive\"\n",
-        "        drive.mount(drive_path,force_remount=force_remount)\n",
-        "        models_path_gdrive = \"/content/drive/MyDrive/AI/models\" #@param {type:\"string\"}\n",
-        "        output_path_gdrive = \"/content/drive/MyDrive/AI/StableDiffusion\" #@param {type:\"string\"}\n",
-        "        models_path = models_path_gdrive\n",
-        "        output_path = output_path_gdrive\n",
-        "    except:\n",
-        "        print(\"...error mounting drive or with drive path variables\")\n",
-        "        print(\"...reverting to default path variables\")\n",
+        "# if mount_google_drive:\n",
+        "#     from google.colab import drive # type: ignore\n",
+        "#     try:\n",
+        "#         drive_path = \"/content/drive\"\n",
+        "#         drive.mount(drive_path,force_remount=force_remount)\n",
+        "#         models_path_gdrive = \"/content/drive/MyDrive/AI/models\" #@param {type:\"string\"}\n",
+        "#         output_path_gdrive = \"/content/drive/MyDrive/AI/StableDiffusion\" #@param {type:\"string\"}\n",
+        "#         models_path = models_path_gdrive\n",
+        "#         output_path = output_path_gdrive\n",
+        "#     except:\n",
+        "#         print(\"...error mounting drive or with drive path variables\")\n",
+        "#         print(\"...reverting to default path variables\")\n",
         "\n",
         "import os\n",
         "# os.makedirs(models_path, exist_ok=True)\n",
@@ -144,7 +171,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "id": "VRNl2mfepEIe"
@@ -223,7 +250,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "id": "81qmVZbrm4uu"
@@ -1016,7 +1043,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "id": "CIUJ7lWI4v53"
@@ -1210,6 +1237,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "ov3r4RD1tzsT"
@@ -1219,6 +1247,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "0j7rgxvLvfay"
@@ -1229,7 +1258,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "id": "8HJN2TE3vh-J"
@@ -1361,6 +1390,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "63UOJvU3xdPS"
@@ -1372,7 +1402,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "2ujwkGZTcGev"
       },
@@ -1395,6 +1425,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "s8RAo2zI-vQm"
@@ -1405,7 +1436,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "id": "qH74gBWDd2oq"
@@ -2007,6 +2038,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "4zV0J_YbMCTx"
@@ -2103,6 +2135,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "RoECylTun7AA"
